--- a/md/1.md
+++ b/md/1.md
@@ -15,3 +15,8 @@ app/Http/Controllers/Controller.php
 artisan make:controller
 
 artisan make:model Post --migration
+
+php artisan storage:link
+http://localhost:8000/storage/images/%EB%8B%A4%EC%9A%B4%EB%A1%9C%EB%93%9C.png
+
+-> storage/ ~~ = public 접근 가능
