--- a/md/1.md
+++ b/md/1.md
@@ -22,3 +22,4 @@ http://localhost:8000/storage/images/%EB%8B%A4%EC%9A%B4%EB%A1%9C%EB%93%9C.png
 -> storage/ ~~ = public 접근 가능
 
 php artisan make:policy PostPolicy --model=Post
+php artisan make:migration add_count_to_posts_table
